--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
 autopep8==1.7.0
 colorama==0.4.6
+mypy==0.991
+mypy-extensions==0.4.3
 pycodestyle==2.9.1
 PyYAML==6.0
+ruamel.yaml==0.17.21
+ruamel.yaml.clib==0.2.7
 toml==0.10.2
+tomli==2.0.1
+typing_extensions==4.4.0
 xmltodict==0.13.0
